--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="centre categorie">
-        <p class="categorie">Recette</p>
-    </div>
     <div class="contenu">
+        <div class="centre categorie">
+            <p class="categorie">Recette</p>
+        </div>
         <h1 align="center">Gâteau au chocolat</h1>
         <!--<div class="separateur"></div>-->
         <hr>
@@ -34,36 +34,38 @@
                 </tr>
             </table>
         </div>
-        <div class="colonne1 colonne">
-            <h2>Ingrédients</h2>
-            <div class="ingredient">
-                <p>chocolat noir : 200gr</p>
-                <p>sucre : 150gr</p>
-                <p>beurre : 200gr</p>
-                <p>oeuf : 4</p>
-                <p>farine : 80gr</p>
+        <div>
+            <div class="colonne1 colonne">
+                <h2>Ingrédients</h2>
+                <div class="ingredient">
+                    <p>chocolat noir : 200gr</p>
+                    <p>sucre : 150gr</p>
+                    <p>beurre : 200gr</p>
+                    <p>oeuf : 4</p>
+                    <p>farine : 80gr</p>
+                </div>
             </div>
-        </div>
-        <div class="colonne2 colonne">
-            <h2>Préparation</h2>
-            <table class="preparation">
-                <tr>
-                    <td><p class="numero">1</p></td>
-                    <td class="prepa">Faire le premier truc</td>
-                </tr>
-                <tr>
-                    <td><p class="numero">2</p></td>
-                    <td class="prepa">Ensuite le deuxieme</td>
-                </tr>
-                <tr>
-                    <td><p class="numero">3</p></td>
-                    <td class="prepa">Puis le troisième bien sur</td>
-                </tr>
-                <tr>
-                    <td><p class="numero">4</p></td>
-                    <td class="prepa">Et enfin faire la dernière chose pour le cuire</td>
-                </tr>
-            </table>
+            <div class="colonne2 colonne">
+                <h2>Préparation</h2>
+                <table class="preparation">
+                    <tr>
+                        <td><p class="numero">1</p></td>
+                        <td class="prepa">Faire le premier truc</td>
+                    </tr>
+                    <tr>
+                        <td><p class="numero">2</p></td>
+                        <td class="prepa">Ensuite le deuxieme</td>
+                    </tr>
+                    <tr>
+                        <td><p class="numero">3</p></td>
+                        <td class="prepa">Puis le troisième bien sur</td>
+                    </tr>
+                    <tr>
+                        <td><p class="numero">4</p></td>
+                        <td class="prepa">Et enfin faire la dernière chose pour le cuire</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </body>
